Avoid logging pull-secrets
Change-Id: I8759f81d8fe4089c25bd77d3937b02e8e3dbd093

--- a/dci-openshift-agent.yml
+++ b/dci-openshift-agent.yml
@@ -48,6 +48,7 @@
         pipeline_id: "{{ dci_pipeline_id }}"
       register: job_info
       when: job_info is not defined
+      no_log: "{{ dci_hide_secrets }}"
 
     - name: Custom OCP build component
       when:
@@ -87,6 +88,7 @@
           dci_workarounds +
           ((dci_main == "upgrade") |
           ternary(["upgrade"], ["install", "install_type:" + (install_type | default('ipi'))])) }}
+      no_log: "{{ dci_hide_secrets }}"
 
     - name: Add cluster tag to the current job
       dci_job:
@@ -94,12 +96,14 @@
         tags:
           - cluster:{{ cluster }}
       when: cluster is defined
+      no_log: "{{ dci_hide_secrets }}"
 
     - name: Count workarounds
       dci_job:
         id: "{{ job_id }}"
         key: "workarounds"
         value: "{{ dci_workarounds | length }}"
+      no_log: "{{ dci_hide_secrets }}"
 
     - name: Debug components
       ansible.builtin.debug:
@@ -202,6 +206,7 @@
         build: "{{ build }}"
       delegate_to: jumphost
       delegate_facts: true
+      no_log: "{{ dci_hide_secrets }}"
 
 # Step 1a : pre run
 - name: 'Launch pre-run'
