Add an option to apply PAO after cluster install
In OCP 4.16 and above, is possible to install the performance profile
during the installation of the cluster, but in some cases it is not
ideal or not functional. In the case of compact cluster it will cause
issues. A new option has been added to allow moving the application of
the performance profile after cluster install.

Change-Id: I2b3864f3d54faeb4642496bfefddb0f1d63d9ee5

--- a/plays/abi-install.yml
+++ b/plays/abi-install.yml
@@ -149,6 +149,7 @@
       when:
         - performance_definition is defined
         - version is version('4.16', '>=')
+        - dci_pao_on_install | default(true) | bool
 
     - name: Generate_manifests
       vars:
