--- a/plays/build-catalog.yml
+++ b/plays/build-catalog.yml
@@ -2,6 +2,8 @@
 - name: "Set facts for index fallback - Try up to 3 previous versions"
   ansible.builtin.set_fact:
     fallback_counter: 0
+    ocp_major: "{{ ocp_major }}"
+    ocp_minor: "{{ ocp_minor }}"
 
 - name: "Prune catalog - recursive"
   ansible.builtin.include_tasks: prune-catalog.yml
