Build unique lshw images in disconnected
To avoid possible issues by building the same image at the same time,
create unique images per job and clean them after push.
Set the expiration to the image pushed to the registry to avoid filling
it up.

--- a/plays/files/Containerfile
+++ b/plays/files/Containerfile
@@ -4,3 +4,5 @@ FROM registry.access.redhat.com/ubi10/ubi-minimal:latest
 RUN microdnf update -y && \
     microdnf install -y lshw && \
     microdnf clean all
+
+LABEL quay.expires-after=6h
