Allow preserve default catalogs
Allow installing operators from default catalogs and from the local registry.

Change-Id: I6e176a93c0bb130a72bf7deb3ca1c6a153dfdaa7

--- a/plays/prepare-operators.yml
+++ b/plays/prepare-operators.yml
@@ -27,6 +27,7 @@
   when:
     - dci_main == 'install'
     - dci_disconnected | default(false) | bool
+    - not dci_preserve_default_catalogs | default(false) | bool
   block:
     - name: "Disable default catalog sources for disconnected deployment"
       kubernetes.core.k8s:
