--- a/plays/get-logs.yml
+++ b/plays/get-logs.yml
@@ -15,6 +15,8 @@
 
 - name: Collect hardware data
   ansible.builtin.include_tasks: get-hardware-data.yml
+  when:
+    - dci_collect_hardware | default(true) | bool
 
 - name: "Get logs from IPI/UPI deployment"
   vars:
