--- a/plays/upgrade-artifacts.yml
+++ b/plays/upgrade-artifacts.yml
@@ -23,6 +23,7 @@
     mor_write_custom_config: false
     mor_build: "{{ build }}"
     mor_oc: "{{ oc_tool_path }}"
+    mor_extra_flags: "{{ dci_oc_mirror_extra_flags | default('') }}"
   when:
     - dci_disconnected | default(false) |  bool
 
@@ -111,6 +112,7 @@
         mor_write_custom_config: false
         mor_build: "{{ build }}"
         mor_oc: "{{ oc_tool_path }}"
+        mor_extra_flags: "{{ dci_oc_mirror_extra_flags | default('') }}"
       when:
         - dci_disconnected | default(false) |  bool
 ...
