Set explicit api versions in PAO
For the current version of kubernetes.core collection there is a
limitation with the api values received from a cluster when attempting
to find a suitable one. Instead use an explicit api version.

Gitleaks-Sign: OC4zMC4wfDIwMjYtMDEtMjBUMTM6NTE6MjI=
Gitleaks-Hash: e3353aeac2cd399fe86eea311ec3941dd1458293

--- a/plays/apply-pao-profile.yml
+++ b/plays/apply-pao-profile.yml
@@ -26,7 +26,7 @@
   vars:
     check_wait_retries: "{{ 16 * (dci_compute_size | default(dci_control_plane_size) | length + 1 ) }}"
   kubernetes.core.k8s_info:
-    api: machineconfiguration.openshift.io/v1
+    api_version: machineconfiguration.openshift.io/v1
     kind: KubeletConfig
     name: "performance-{{ profile_state.result.metadata.name }}"
     namespace: default
@@ -64,6 +64,7 @@
 - name: Reset maxUnavailable count to default value 1
   kubernetes.core.k8s:
     definition:
+      api_version: machineconfiguration.openshift.io/v1
       kind: MachineConfigPool
       metadata:
         name: worker
