Add explicit versions for k8s_info
Continue adding explicit api version for non-default k8s resources as we
have seen issues lately when not doing so.

Gitleaks-Sign: OC4zMC4wfDIwMjYtMDEtMjFUMTU6MzY6MDc=
Gitleaks-Hash: 7a7994350481aa30a0eea92d3a16a967de912ded

--- a/plays/apply-tuned-profile.yml
+++ b/plays/apply-tuned-profile.yml
@@ -11,7 +11,7 @@
   vars:
     check_wait_retries: "{{ 16 * (dci_compute_size | default(dci_control_plane_size) | length + 1 ) }}"
   kubernetes.core.k8s_info:
-    api: tuned.openshift.io/v1
+    api_version: tuned.openshift.io/v1
     kind: Tuned
     name: "{{ tuned_state.result.spec.profile[0].name }}"
     namespace: openshift-cluster-node-tuning-operator
