--- a/plays/acm-pre-run.yml
+++ b/plays/acm-pre-run.yml
@@ -58,6 +58,7 @@
   block:
     - name: Check if IDMS is supported
       kubernetes.core.k8s_info:
+        api_version: apiextensions.k8s.io/v1
         kind: CustomResourceDefinition
         name: imagedigestmirrorsets.config.openshift.io
       register: idms_res
