--- a/plays/check-cluster-health.yml
+++ b/plays/check-cluster-health.yml
@@ -52,6 +52,7 @@
 
 - name: "Get cluster version information"
   kubernetes.core.k8s_info:
+    api_version: config.openshift.io/v1
     kind: ClusterVersion
     name: version
   register: cluster_version
