--- a/plays/monitor-upgrade.yml
+++ b/plays/monitor-upgrade.yml
@@ -1,5 +1,6 @@
 - name: Get cluster version info (upgrade)
   kubernetes.core.k8s_info:
+    api_version: config.openshift.io/v1
     kind: ClusterVersion
     name: version
   register: cluster_version_info
