--- a/plays/pre-ga-catalog.yml
+++ b/plays/pre-ga-catalog.yml
@@ -1,6 +1,7 @@
 ---
 - name: Check if IDMS is supported
   kubernetes.core.k8s_info:
+    api_version: apiextensions.k8s.io/v1
     kind: CustomResourceDefinition
     name: imagedigestmirrorsets.config.openshift.io
   register: idms_res
