--- a/plays/setup-nro.yml
+++ b/plays/setup-nro.yml
@@ -1,6 +1,7 @@
 ---
 - name: Check if the NRO CRDs are present
   kubernetes.core.k8s_info:
+    api_version: apiextensions.k8s.io/v1
     kind: CustomResourceDefinition
     name: "{{ item }}"
   register: numa_crd
