--- a/plays/configure-jumphost.yml
+++ b/plays/configure-jumphost.yml
@@ -48,7 +48,7 @@
   ansible.builtin.file:
     path: "{{ dci_cache_dir }}"
     state: directory
-    owner: "{{ ansible_user_id }}"
+    owner: "{{ ansible_user_uid }}"
     group: "{{ ansible_user_gid }}"
     mode: "0750"
   become: true
