--- a/plays/tests.yml
+++ b/plays/tests.yml
@@ -20,6 +20,7 @@
   containers.podman.podman_image:
     name: "quay.io/openshift/origin-tests"
     state: absent
+  ignore_errors: true
 
 - name: Run cnf tests
   ansible.builtin.include_tasks: cnf-tests-run.yml
