Set merge type to avoid lookup
Change-Id: I682633592fec6a4a4487afdd2109e79486b38f5a

--- a/plays/apply-pao-profile.yml
+++ b/plays/apply-pao-profile.yml
@@ -63,8 +63,11 @@
 
 - name: Reset maxUnavailable count to default value 1
   kubernetes.core.k8s:
+    state: present
+    merge_type: ['merge']
+    api_version: machineconfiguration.openshift.io/v1
+    kind: MachineConfigPool
     definition:
-      api_version: machineconfiguration.openshift.io/v1
       kind: MachineConfigPool
       metadata:
         name: worker
