--- a/plays/ipi-install.yml
+++ b/plays/ipi-install.yml
@@ -139,7 +139,7 @@
     - name: Set artifact web URL
       vars:
         controller_ip: "{{ hostvars[inventory_hostname]['ansible_env'].SSH_CONNECTION.split(' ')[0] }}"
-        controller_url: "{{ (controller_ip | ipv6) | ternary('[' + controller_ip + ']', controller_ip) }}"
+        controller_url: "{{ (controller_ip | ansible.utils.ipv6) | ternary('[' + controller_ip + ']', controller_ip) }}"  # noqa: jinja[invalid]
       ansible.builtin.set_fact:
         release_url: "http://{{ controller_url }}:{{ aw_dynamic_port }}"
 
