Delegated upload-log tasks to provision host
- Add delegate_to setting to local log dir creation and log export.
- Fixed fqcn[action-core] in abi-install.yml play.

--- a/plays/abi-install.yml
+++ b/plays/abi-install.yml
@@ -100,7 +100,7 @@
         - dci_ephemeral_http_store | default (true) | bool
 
     - name: Fail configuring the http_store
-      fail:
+      ansible.builtin.fail:
         msg: "http_store pod failed, cannot continue"
 
 - name: "ABI install"
