--- a/plays/setup-rhoai.yml
+++ b/plays/setup-rhoai.yml
@@ -21,7 +21,8 @@
         full_version: "{{ (current_subscriptions | json_query(subs_details) | first) | regex_search('\\d+\\.\\d+\\.\\d+') }}"
         rhods_version: >-
           {{ full_version if not full_version.endswith('.0') else full_version[:-2] }}
-        rhoai_helper_url: "https://raw.githubusercontent.com/red-hat-data-services/rhoai-disconnected-install-helper/refs/heads/main/rhoai-{{ rhods_version }}.md"
+        rhoai_helper_url: >-
+          "https://raw.githubusercontent.com/red-hat-data-services/rhoai-disconnected-install-helper/refs/heads/main/rhoai-{{ rhods_version }}.md"
       uri:
         url: "{{ rhoai_helper_url }}"
         return_content: true
